log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 10:56:27 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7332960
Wed 29 Mar 2023 10:56:41 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d674e2d
Wed 29 Mar 2023 10:57:00 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
6936fa9
Wed 29 Mar 2023 10:57:37 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
05e11d5
Wed 29 Mar 2023 10:59:42 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
302b532
Wed 29 Mar 2023 11:00:47 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a1bd7f8
Wed 29 Mar 2023 11:01:40 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8710dc3
Wed 29 Mar 2023 11:06:19 PM UTC: 
 arraylist.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:38:7: error: ‘list’ undeclared (first use in this function)
   38 |   if (list->size==list->capacity)
      |       ^~~~
arraylist.c:38:7: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:45:5: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   45 |     size++;
      |     ^~~~
      |     dysize
Compilation failed
aa09681
